# messagio

./: LICENSE  README.md  conftest.py  main.py  requirements.txt  setup.cfg  setup.py
messagio/: abstract_message_center.py  autodiscover.py  decorators.py  exceptions.py  message_center.py  tasks.py
src/messagio/: __init__.py  abstract_message_center.py  autodiscover.py  const.py  decorators.py  message_center.py  tasks.py
testing/: events.py  listeners.py  tests.py
tests/: events.py  listeners.py  tests.py
