[metadata]
name = messagio
version = 0.7
author = Dimo Fedortchenko
author_email = d@onedaybeard.net
description = Define events (aka messagios) and then listen for those events, like pubsub, but better. Uses celery for transport.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zeraien/messagio
project_urls =
    Bug Tracker = https://github.com/zeraien/messagio/issues
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Framework :: Celery
        Framework :: Django
        Topic :: Software Development :: Libraries
        Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
